Port to 1.19, simplify code

--- a/src/main/resources/assets/japaneseemojicommands/lang/en_us.json
+++ b/src/main/resources/assets/japaneseemojicommands/lang/en_us.json
@@ -1,41 +1,41 @@
 {
-  "japanese-emoji-commands.emoticon.scared":"%s {{ (>_<) }}",
-  "japanese-emoji-commands.emoticon.doubt":"%s (￢_￢)",
-  "japanese-emoji-commands.emoticon.bird":"%s (◉Θ◉)",
-  "japanese-emoji-commands.emoticon.blush":"%s (ง ื▿ ื)ว",
-  "japanese-emoji-commands.emoticon.music":"%s ♪♬((d⌒ω⌒b))♬♪",
-  "japanese-emoji-commands.emoticon.confused":"%s (＠_＠)",
-  "japanese-emoji-commands.emoticon.hiding":"%s ┬┴┬┴┤(･_├┬┴┬┴",
-  "japanese-emoji-commands.emoticon.tableflip":"%s (╯°□°）╯︵ ┻━┻",
-  "japanese-emoji-commands.emoticon.sleep":"%s (＿ ＿*) Z z z",
-  "japanese-emoji-commands.emoticon.sorry":"%s (* )人",
-  "japanese-emoji-commands.emoticon.bear":"%s (￣(ｴ)￣)",
-  "japanese-emoji-commands.emoticon.rabbit":"%s ／(^ x ^)＼",
-  "japanese-emoji-commands.emoticon.unflip":"%s ┬─┬ ノ( ゜-゜ノ)",
-  "japanese-emoji-commands.emoticon.friends":"%s ヽ( ⌒ω⌒)人(=^‥^= )ﾉ",
-  "japanese-emoji-commands.emoticon.sad":"%s ( ; ω ; )",
-  "japanese-emoji-commands.emoticon.cat":"%s (=^-ω-^=)",
-  "japanese-emoji-commands.emoticon.shrug":"%s ¯\\_(ツ)_/¯",
-  "japanese-emoji-commands.emoticon.notamused":"%s (￣︿￣)",
-  "japanese-emoji-commands.emoticon.nosebleed":"%s (*￣ii￣)",
-  "japanese-emoji-commands.emoticon.sympathy":"%s (っ´ω`)ﾉ(╥ω╥)",
-  "japanese-emoji-commands.emoticon.wave":"%s (⌒ω⌒)ﾉ",
-  "japanese-emoji-commands.emoticon.indifferent":"%s ╮( ˘ ､ ˘ )╭",
-  "japanese-emoji-commands.emoticon.dog":"%s U^ｪ^U",
-  "japanese-emoji-commands.emoticon.wink":"%s (^_~)",
-  "japanese-emoji-commands.emoticon.weapons":"%s (ಠ o ಠ)¤=[]:::::>",
-  "japanese-emoji-commands.emoticon.spider":"%s /╲/╭[ ᴼᴼ ౪ ᴼᴼ]╮/╱\\",
-  "japanese-emoji-commands.emoticon.love":"%s (❤ω❤)",
-  "japanese-emoji-commands.emoticon.angry":"%s ୧((#Φ益Φ#))୨",
-  "japanese-emoji-commands.emoticon.enemies":"%s /( .□.)＼ ︵╰(°益°)╯︵ /(.□. /)",
-  "japanese-emoji-commands.emoticon.dead":"%s (x_x)",
-  "japanese-emoji-commands.emoticon.writing":"%s ( ￣ー￣)φ__",
-  "japanese-emoji-commands.emoticon.pig":"%s ｡ﾟ(ﾟ´(00)`ﾟ)ﾟ｡",
-  "japanese-emoji-commands.emoticon.magic":"%s (ﾉ>ω<)ﾉ :｡･::･ﾟ’★,｡･::･ﾟ’☆",
-  "japanese-emoji-commands.emoticon.food":"%s ( ˘▽˘)っ♨",
-  "japanese-emoji-commands.emoticon.fish":"%s (°)#))<<",
-  "japanese-emoji-commands.emoticon.happy":"%s (* ^ ω ^)",
-  "japanese-emoji-commands.emoticon.hug":"%s (つ✧ω✧)つ",
-  "japanese-emoji-commands.emoticon.surprised":"%s (o_O)",
-  "japanese-emoji-commands.emoticon.runs":"%s ε=ε=┌( >_<)┘"
+  "japaneseemojicommands.emoticon.scared":"%s {{ (>_<) }}",
+  "japaneseemojicommands.emoticon.doubt":"%s (￢_￢)",
+  "japaneseemojicommands.emoticon.bird":"%s (◉Θ◉)",
+  "japaneseemojicommands.emoticon.blush":"%s (ง ื▿ ื)ว",
+  "japaneseemojicommands.emoticon.music":"%s ♪♬((d⌒ω⌒b))♬♪",
+  "japaneseemojicommands.emoticon.confused":"%s (＠_＠)",
+  "japaneseemojicommands.emoticon.hiding":"%s ┬┴┬┴┤(･_├┬┴┬┴",
+  "japaneseemojicommands.emoticon.tableflip":"%s (╯°□°）╯︵ ┻━┻",
+  "japaneseemojicommands.emoticon.sleep":"%s (＿ ＿*) Z z z",
+  "japaneseemojicommands.emoticon.sorry":"%s (* )人",
+  "japaneseemojicommands.emoticon.bear":"%s (￣(ｴ)￣)",
+  "japaneseemojicommands.emoticon.rabbit":"%s ／(^ x ^)＼",
+  "japaneseemojicommands.emoticon.unflip":"%s ┬─┬ ノ( ゜-゜ノ)",
+  "japaneseemojicommands.emoticon.friends":"%s ヽ( ⌒ω⌒)人(=^‥^= )ﾉ",
+  "japaneseemojicommands.emoticon.sad":"%s ( ; ω ; )",
+  "japaneseemojicommands.emoticon.cat":"%s (=^-ω-^=)",
+  "japaneseemojicommands.emoticon.shrug":"%s ¯\\_(ツ)_/¯",
+  "japaneseemojicommands.emoticon.notamused":"%s (￣︿￣)",
+  "japaneseemojicommands.emoticon.nosebleed":"%s (*￣ii￣)",
+  "japaneseemojicommands.emoticon.sympathy":"%s (っ´ω`)ﾉ(╥ω╥)",
+  "japaneseemojicommands.emoticon.wave":"%s (⌒ω⌒)ﾉ",
+  "japaneseemojicommands.emoticon.indifferent":"%s ╮( ˘ ､ ˘ )╭",
+  "japaneseemojicommands.emoticon.dog":"%s U^ｪ^U",
+  "japaneseemojicommands.emoticon.wink":"%s (^_~)",
+  "japaneseemojicommands.emoticon.weapons":"%s (ಠ o ಠ)¤=[]:::::>",
+  "japaneseemojicommands.emoticon.spider":"%s /╲/╭[ ᴼᴼ ౪ ᴼᴼ]╮/╱\\",
+  "japaneseemojicommands.emoticon.love":"%s (❤ω❤)",
+  "japaneseemojicommands.emoticon.angry":"%s ୧((#Φ益Φ#))୨",
+  "japaneseemojicommands.emoticon.enemies":"%s /( .□.)＼ ︵╰(°益°)╯︵ /(.□. /)",
+  "japaneseemojicommands.emoticon.dead":"%s (x_x)",
+  "japaneseemojicommands.emoticon.writing":"%s ( ￣ー￣)φ__",
+  "japaneseemojicommands.emoticon.pig":"%s ｡ﾟ(ﾟ´(00)`ﾟ)ﾟ｡",
+  "japaneseemojicommands.emoticon.magic":"%s (ﾉ>ω<)ﾉ :｡･::･ﾟ’★,｡･::･ﾟ’☆",
+  "japaneseemojicommands.emoticon.food":"%s ( ˘▽˘)っ♨",
+  "japaneseemojicommands.emoticon.fish":"%s (°)#))<<",
+  "japaneseemojicommands.emoticon.happy":"%s (* ^ ω ^)",
+  "japaneseemojicommands.emoticon.hug":"%s (つ✧ω✧)つ",
+  "japaneseemojicommands.emoticon.surprised":"%s (o_O)",
+  "japaneseemojicommands.emoticon.runs":"%s ε=ε=┌( >_<)┘"
 }
