Fix %s showing after using command

--- a/src/main/resources/assets/japaneseemojicommands/lang/en_us.json
+++ b/src/main/resources/assets/japaneseemojicommands/lang/en_us.json
@@ -1,41 +1,41 @@
 {
-  "japaneseemojicommands.emoticon.scared": "%s {{ (>_<) }}",
-  "japaneseemojicommands.emoticon.doubt": "%s (￢_￢)",
-  "japaneseemojicommands.emoticon.bird": "%s (◉Θ◉)",
-  "japaneseemojicommands.emoticon.blush": "%s (ง ื▿ ื)ว",
-  "japaneseemojicommands.emoticon.music": "%s ♪♬((d⌒ω⌒b))♬♪",
-  "japaneseemojicommands.emoticon.confused": "%s (＠_＠)",
-  "japaneseemojicommands.emoticon.hiding": "%s ┬┴┬┴┤(･_├┬┴┬┴",
-  "japaneseemojicommands.emoticon.tableflip": "%s (╯°□°）╯︵ ┻━┻",
-  "japaneseemojicommands.emoticon.sleep": "%s (＿ ＿*) Z z z",
-  "japaneseemojicommands.emoticon.sorry": "%s (* )人",
-  "japaneseemojicommands.emoticon.bear": "%s (￣(ｴ)￣)",
-  "japaneseemojicommands.emoticon.rabbit": "%s ／(^ x ^)＼",
-  "japaneseemojicommands.emoticon.unflip": "%s ┬─┬ ノ( ゜-゜ノ)",
-  "japaneseemojicommands.emoticon.friends": "%s ヽ( ⌒ω⌒)人(=^‥^= )ﾉ",
-  "japaneseemojicommands.emoticon.sad": "%s ( ; ω ; )",
-  "japaneseemojicommands.emoticon.cat": "%s (=^-ω-^=)",
-  "japaneseemojicommands.emoticon.shrug": "%s ¯\\_(ツ)_/¯",
-  "japaneseemojicommands.emoticon.notamused": "%s (￣︿￣)",
-  "japaneseemojicommands.emoticon.nosebleed": "%s (*￣ii￣)",
-  "japaneseemojicommands.emoticon.sympathy": "%s (っ´ω`)ﾉ(╥ω╥)",
-  "japaneseemojicommands.emoticon.wave": "%s (⌒ω⌒)ﾉ",
-  "japaneseemojicommands.emoticon.indifferent": "%s ╮( ˘ ､ ˘ )╭",
-  "japaneseemojicommands.emoticon.dog": "%s U^ｪ^U",
-  "japaneseemojicommands.emoticon.wink": "%s (^_~)",
-  "japaneseemojicommands.emoticon.weapons": "%s (ಠ o ಠ)¤=[]:::::>",
-  "japaneseemojicommands.emoticon.spider": "%s /╲/╭[ ᴼᴼ ౪ ᴼᴼ]╮/╱\\",
-  "japaneseemojicommands.emoticon.love": "%s (❤ω❤)",
-  "japaneseemojicommands.emoticon.angry": "%s ୧((#Φ益Φ#))୨",
-  "japaneseemojicommands.emoticon.enemies": "%s /( .□.)＼ ︵╰(°益°)╯︵ /(.□. /)",
-  "japaneseemojicommands.emoticon.dead": "%s (x_x)",
-  "japaneseemojicommands.emoticon.writing": "%s ( ￣ー￣)φ__",
-  "japaneseemojicommands.emoticon.pig": "%s ｡ﾟ(ﾟ´(00)`ﾟ)ﾟ｡",
-  "japaneseemojicommands.emoticon.magic": "%s (ﾉ>ω<)ﾉ :｡･::･ﾟ’★,｡･::･ﾟ’☆",
-  "japaneseemojicommands.emoticon.food": "%s ( ˘▽˘)っ♨",
-  "japaneseemojicommands.emoticon.fish": "%s (°)#))<<",
-  "japaneseemojicommands.emoticon.happy": "%s (* ^ ω ^)",
-  "japaneseemojicommands.emoticon.hug": "%s (つ✧ω✧)つ",
-  "japaneseemojicommands.emoticon.surprised": "%s (o_O)",
-  "japaneseemojicommands.emoticon.runs": "%s ε=ε=┌( >_<)┘"
+  "japaneseemojicommands.emoticon.scared": "{{ (>_<) }}",
+  "japaneseemojicommands.emoticon.doubt": "(￢_￢)",
+  "japaneseemojicommands.emoticon.bird": "(◉Θ◉)",
+  "japaneseemojicommands.emoticon.blush": "(ง ื▿ ื)ว",
+  "japaneseemojicommands.emoticon.music": "♪♬((d⌒ω⌒b))♬♪",
+  "japaneseemojicommands.emoticon.confused": "(＠_＠)",
+  "japaneseemojicommands.emoticon.hiding": "┬┴┬┴┤(･_├┬┴┬┴",
+  "japaneseemojicommands.emoticon.tableflip": "(╯°□°）╯︵ ┻━┻",
+  "japaneseemojicommands.emoticon.sleep": "(＿ ＿*) Z z z",
+  "japaneseemojicommands.emoticon.sorry": "(* )人",
+  "japaneseemojicommands.emoticon.bear": "(￣(ｴ)￣)",
+  "japaneseemojicommands.emoticon.rabbit": "／(^ x ^)＼",
+  "japaneseemojicommands.emoticon.unflip": "┬─┬ ノ( ゜-゜ノ)",
+  "japaneseemojicommands.emoticon.friends": "ヽ( ⌒ω⌒)人(=^‥^= )ﾉ",
+  "japaneseemojicommands.emoticon.sad": "( ; ω ; )",
+  "japaneseemojicommands.emoticon.cat": "(=^-ω-^=)",
+  "japaneseemojicommands.emoticon.shrug": "¯\\_(ツ)_/¯",
+  "japaneseemojicommands.emoticon.notamused": "(￣︿￣)",
+  "japaneseemojicommands.emoticon.nosebleed": "(*￣ii￣)",
+  "japaneseemojicommands.emoticon.sympathy": "(っ´ω`)ﾉ(╥ω╥)",
+  "japaneseemojicommands.emoticon.wave": "(⌒ω⌒)ﾉ",
+  "japaneseemojicommands.emoticon.indifferent": "╮( ˘ ､ ˘ )╭",
+  "japaneseemojicommands.emoticon.dog": "U^ｪ^U",
+  "japaneseemojicommands.emoticon.wink": "(^_~)",
+  "japaneseemojicommands.emoticon.weapons": "(ಠ o ಠ)¤=[]:::::>",
+  "japaneseemojicommands.emoticon.spider": "/╲/╭[ ᴼᴼ ౪ ᴼᴼ]╮/╱\\",
+  "japaneseemojicommands.emoticon.love": "(❤ω❤)",
+  "japaneseemojicommands.emoticon.angry": "୧((#Φ益Φ#))୨",
+  "japaneseemojicommands.emoticon.enemies": "/( .□.)＼ ︵╰(°益°)╯︵ /(.□. /)",
+  "japaneseemojicommands.emoticon.dead": "(x_x)",
+  "japaneseemojicommands.emoticon.writing": "( ￣ー￣)φ__",
+  "japaneseemojicommands.emoticon.pig": "｡ﾟ(ﾟ´(00)`ﾟ)ﾟ｡",
+  "japaneseemojicommands.emoticon.magic": "(ﾉ>ω<)ﾉ :｡･::･ﾟ’★,｡･::･ﾟ’☆",
+  "japaneseemojicommands.emoticon.food": "( ˘▽˘)っ♨",
+  "japaneseemojicommands.emoticon.fish": "(°)#))<<",
+  "japaneseemojicommands.emoticon.happy": "(* ^ ω ^)",
+  "japaneseemojicommands.emoticon.hug": "(つ✧ω✧)つ",
+  "japaneseemojicommands.emoticon.surprised": "(o_O)",
+  "japaneseemojicommands.emoticon.runs": "ε=ε=┌( >_<)┘"
 }
