Make spider emoji legs equal on both sides

--- a/src/main/resources/assets/japaneseemojicommands/lang/en_us.json
+++ b/src/main/resources/assets/japaneseemojicommands/lang/en_us.json
@@ -24,7 +24,7 @@
   "japaneseemojicommands.emoticon.dog": "U^ｪ^U",
   "japaneseemojicommands.emoticon.wink": "(^_~)",
   "japaneseemojicommands.emoticon.weapons": "(ಠ o ಠ)¤=[]:::::>",
-  "japaneseemojicommands.emoticon.spider": "/╲/╭[ ᴼᴼ ౪ ᴼᴼ]╮/╱\\",
+  "japaneseemojicommands.emoticon.spider": "/╲/╭[ ᴼᴼ ౪ ᴼᴼ]╮\\/\\",
   "japaneseemojicommands.emoticon.love": "(❤ω❤)",
   "japaneseemojicommands.emoticon.angry": "୧((#Φ益Φ#))୨",
   "japaneseemojicommands.emoticon.enemies": "/( .□.)＼ ︵╰(°益°)╯︵ /(.□. /)",
